--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -18,5 +18,9 @@
         <item>cn.toside.music.mobile</item>
         <item>com.apple.android.music</item>
         <item>com.luna.music</item>
+        <item>com.kyant.vanilla</item>
+        <item>player.phonograph.plus</item>
+        <item>com.lalilu.lmusic</item>
+
     </array>
 </resources>
