--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/app_nav"
+        android:icon="@drawable/ic_round_settings"
+        android:title="@string/app_fragment_label" />
     <item
         android:id="@+id/home_nav"
         android:icon="@drawable/ic_home"
