--- a/app/src/main/res/xml/settings_prefs.xml
+++ b/app/src/main/res/xml/settings_prefs.xml
@@ -18,8 +18,7 @@
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <SwitchPreference
         android:layout_width="wrap_content"
