优化隐藏图标

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/show_hide_desktop_icons"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:title="@string/show_hide_desktop_icons" />
+    <group
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:checkableBehavior="all">
+        <item
+            android:id="@+id/show_hide_desktop_icons"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:title="@string/show_hide_desktop_icons" />
+    </group>
 </menu>
