--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -198,6 +198,18 @@
                             style="@style/TextValue"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            style="@style/TextLabel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/app_rules_version_label" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/app_rules_version_value"
+                            style="@style/TextValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
             </LinearLayout>
