--- a/app/src/main/res/xml/settings_prefs.xml
+++ b/app/src/main/res/xml/settings_prefs.xml
@@ -14,4 +14,10 @@
         android:key="enhanced_hidden_lyrics"
         android:summary="@string/enhanced_hidden_lyrics_tips"
         android:title="@string/enhanced_hidden_lyrics" />
+    <SwitchPreference
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:defaultValue="false"
+        android:key="allow_some_software_to_output_after_the_screen"
+        android:title="@string/allow_some_software_to_output_after_the_screen" />
 </PreferenceScreen>
