--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <rikka.widget.borderview.BorderNestedScrollView
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -177,15 +177,15 @@
                             style="@style/TextLabel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:text="@string/api_version_label" />
+                            android:text="@string/api_version_label"
+                            android:textStyle="bold" />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/api_version_value"
-                            android:textStyle="bold"
                             style="@style/TextValue"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold" />
 
                         <com.google.android.material.textview.MaterialTextView
                             style="@style/TextLabel"
@@ -213,7 +213,7 @@
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
             </LinearLayout>
-        </rikka.widget.borderview.BorderNestedScrollView>
+        </androidx.core.widget.NestedScrollView>
     </FrameLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
