优化app规则刷新错误

--- a/app/src/main/res/layout/items_app.xml
+++ b/app/src/main/res/layout/items_app.xml
@@ -76,8 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="?dialogPreferredPadding"
-            android:layout_marginBottom="?dialogPreferredPadding"
-            android:visibility="gone">
+            android:layout_marginBottom="?dialogPreferredPadding">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/app_rules_text_view"
