适配 青盐云听

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -21,5 +21,6 @@
         <item>player.phonograph.plus</item>
         <item>com.xuncorp.suvine.music</item>
         <item>com.caij.puremusic</item>
+        <item>com.xuncorp.qinalt.music</item>
     </array>
 </resources>
