add LyricGetterExt to Xposed Scope

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -22,5 +22,6 @@
         <item>com.xuncorp.suvine.music</item>
         <item>com.caij.puremusic</item>
         <item>com.xuncorp.qinalt.music</item>
+        <item>statusbar.finder</item>
     </array>
 </resources>
