--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,7 @@
                 android:layout_height="?actionBarSize"
                 app:layout_collapseMode="pin"
                 app:logo="@drawable/ic_launcher_round"
-                app:title="@string/home_fragment_label"
+                app:title="@string/app_name"
                 app:titleMarginStart="24dp" />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
