适配荣耀音乐（网易云定制版） 优化代码

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -23,5 +23,6 @@
         <item>com.caij.puremusic</item>
         <item>com.xuncorp.qinalt.music</item>
         <item>statusbar.finder</item>
+        <item>com.hihonor.cloudmusic</item>
     </array>
 </resources>
