适配网易云音乐极速版 修复更换dexkit2.0后高版本网易云无法使用

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,5 +24,6 @@
         <item>com.xuncorp.qinalt.music</item>
         <item>statusbar.finder</item>
         <item>com.hihonor.cloudmusic</item>
+        <item>com.netease.cloudmusic.lite</item>
     </array>
 </resources>
