更新支持列表

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -24,6 +24,7 @@
         <item>com.xuncorp.qinalt.music</item>
         <item>statusbar.finder</item>
         <item>com.hihonor.cloudmusic</item>
+        <item>org.akanework.gramophone</item>
         <item>com.netease.cloudmusic.lite</item>
     </array>
 </resources>
