--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -26,5 +26,6 @@
         <item>com.hihonor.cloudmusic</item>
         <item>org.akanework.gramophone</item>
         <item>com.netease.cloudmusic.lite</item>
+        <item>cn.wenyu.bodian</item>
     </array>
 </resources>
