--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -27,5 +27,6 @@
         <item>org.akanework.gramophone</item>
         <item>com.netease.cloudmusic.lite</item>
         <item>cn.wenyu.bodian</item>
+        <item>com.maxmpz.audioplayer</item>
     </array>
 </resources>
