--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -265,6 +265,11 @@
                                 style="@style/TextValue"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content" />
+                        <com.google.android.material.textview.MaterialTextView
+                            style="@style/TextValue"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/version_differences" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
             </LinearLayout>
