--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -28,5 +28,6 @@
         <item>com.netease.cloudmusic.lite</item>
         <item>cn.wenyu.bodian</item>
         <item>fun.upup.musicfree</item>
+        <item>com.mimicry.mymusic</item>
     </array>
 </resources>
