--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -29,5 +29,6 @@
         <item>cn.wenyu.bodian</item>
         <item>fun.upup.musicfree</item>
         <item>com.mimicry.mymusic</item>
+        <item>yos.music.player</item>
     </array>
 </resources>
