Support KDE Connect
跨设备同步歌词，但仅限于把歌词设置为媒体播放控件的标题

Signed-off-by: ghhccghk <2137610394@qq.com>

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -30,5 +30,6 @@
         <item>fun.upup.musicfree</item>
         <item>com.mimicry.mymusic</item>
         <item>yos.music.player</item>
+        <item>org.kde.kdeconnect_tp</item>
     </array>
 </resources>
