--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,13 @@
 <resources>
 
     <style name="Theme.MyApplication" parent="Theme.Material3.DynamicColors.Light">
-        <item name="android:windowTranslucentStatus">false</item>
         <item name="android:windowTranslucentNavigation">true</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="colorPrimaryVariant">@color/material_grey_300</item>
-        <item name="android:statusBarColor">?android:colorBackground</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="TextValue">
