华为音乐支持

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -31,5 +31,6 @@
         <item>com.mimicry.mymusic</item>
         <item>yos.music.player</item>
         <item>org.kde.kdeconnect_tp</item>
+        <item>com.huawei.music</item>
     </array>
 </resources>
