--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -35,5 +35,6 @@
         <item>music.hifistatus</item>
         <item>com.heytap.music</item>
         <item>com.oppo.music</item>
+        <item>com.maxmpz.audioplayer</item>
     </array>
 </resources>
