--- a/app/src/main/res/layout/dialog_switch.xml
+++ b/app/src/main/res/layout/dialog_switch.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="14dp"
+    android:padding="15dp"
+    android:clickable="true"
+    android:focusable="true"
     android:layout_centerInParent="true"
     android:background="?attr/selectableItemBackground"
     android:gravity="center_vertical">
@@ -22,7 +24,7 @@
             android:layout_height="wrap_content"
             android:textColor="?android:textColorPrimary"
             android:textSize="18sp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="9dp"
             android:maxLines="2"
             android:ellipsize="end" />
 
